@@ -1,8 +1,10 @@
 DIST PortageXS-0.02.05.tar.gz 26143 RMD160 e561ea8619b7b0921639c8237196f9e114130d33 SHA1 cf09a0768fa6372dd8928f03f130c1f951a2d9fe SHA256 a44c2b036120a4008533808291aea55f20da3e33a623527a567a949d4fd41f0a
 DIST PortageXS-0.02.06.tar.gz 27629 RMD160 702b8bc0c1d3b289c4b140f2107de4d6892805f9 SHA1 0ce52c58479848b8f38d5254366c0e95cafbcc63 SHA256 9bf2dfa8d1288530d55c4d8374a8ac80d83884848334a9550ef92df929c46ac8
 DIST PortageXS-0.02.07.tar.gz 28125 RMD160 78815b9355d67f0047e87cd575ac99e469b6c642 SHA1 1267fb59cdacb1fb306a779890dffc679a0b5ecb SHA256 9acea4bdf30a69668c12a328b6e5043252d2631ab964d349ad600d81210ce8a0
+DIST PortageXS-0.02.08.tar.gz 28122 RMD160 7521fe78174756ebde471e441f31fee37fd13f98 SHA1 bdae08ed5a2d1aa82ce45cc219c2bdb7f8a42e4f SHA256 a439b9ed755167fc83477c8594f4da5ec89aa868c651d3ec1eb3b7c214016fea
 EBUILD PortageXS-0.02.05.ebuild 1119 RMD160 2b08fad6ebef407f1d9af18d7aa53d3f89df6f14 SHA1 18e9a8e26458510d72fa7627004c95f3399dd75c SHA256 7890fa10fa8cebaca998095b4b30b86df1c26c81fdd1f184ca6d041a3e6213e0
 EBUILD PortageXS-0.02.06.ebuild 1123 RMD160 3cc16e55747a66f6aab41ae76568eb2707387f8a SHA1 23ec414313b3d3f19e75e3c5e1e773751132e762 SHA256 90660ac246240c3c8d52d596f452951b6aab8ff40fc4b4c590e3fdb664240f44
 EBUILD PortageXS-0.02.07.ebuild 1107 RMD160 5d388e111db717cf9ea026fc47bee569e66e07ca SHA1 a46aa54b513259cad2cff65c9bbd64942709b22e SHA256 faddb1d77448411db8d88139a4b690e34493cfbb167de2a8c70fe1f2930aa069
-MISC ChangeLog 3687 RMD160 afad1efa8747e70c6dcebf24a31e2178cd2ad8a5 SHA1 fd6a40ae1defbcf616e79e8042ee12a473fe095f SHA256 210d48fe6c170c4a93b6d6bb0de52a28e4b4ce644a6ad396579fbc5f769fc49b
+EBUILD PortageXS-0.02.08.ebuild 1111 RMD160 f3a07d1ae7fdd3d7f1de0cc208ee721eb534b502 SHA1 9a1129357d722c0151bebf1a025f0f286e1db17c SHA256 6bf97eeeb369371208f4bd98de2be2309261cc98db2be7db489f1a4a15635494
+MISC ChangeLog 3833 RMD160 8522a916ebdfeb3baff83ccd770f35ddd20e205a SHA1 372f09cc8be86b789c6b21cb90c0106ccf69b071 SHA256 400bd7a30919e28fbee59729642a7895b620ead82ebd8047d2cabb3981ceeb0d
 MISC metadata.xml 304 RMD160 583b128939071e78c19639b32040d0fc93a4d7ed SHA1 ef18029a272435357db2c9659e6604feb85a947a SHA256 cb2e1aac1b922384cc958f14b0607e3707108dd3d08681979cfbd88054cc513f
