@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/PortageXS
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.28 2007/07/28 06:51:20 nixnut Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.29 2008/05/12 12:50:59 ian Exp $
+
+*PortageXS-0.02.08 (12 May 2008)
+
+  12 May 2008; Christian Hartmann <ian@gentoo.org>
+  +PortageXS-0.02.08.ebuild:
+  Bump to 0.02.08 for bug #216484
 
   28 Jul 2007; nixnut <nixnut@gentoo.org> PortageXS-0.02.07.ebuild:
   Stable on ppc wrt bug 186751
